# speech-to-text

./: .gitignore  .pre-commit-config.yaml  README.md  for_ancient_history.py  for_roman_law.py  for_timeseries.py  main.py  pyproject.toml  speech-to-text.py  text-summarization.py
scripts/: audio_from_video.py  speech_to_text.py  text_summarization.py
