[project]
name = "speech-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "openai>=1.108.0",
    "openai-whisper>=20250625",
    "pre-commit>=4.3.0",
    "torch>=2.8.0",
    "yandex-cloud-ml-sdk>=0.15.0",
]
